@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.91.2.81 2004/04/20 13:40:30 mike Exp $"
+ * "$Id: client.c,v 1.91.2.82 2004/06/17 14:45:12 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -2974,6 +2974,13 @@ pipe_command(client_t *con,		/* I - Client connection */
 
 		  "EUC-CN",	"EUC-JP",	"EUC-KR",	"EUC-TW"
 		};
+  static const char * const encryptions[] =
+		{
+		  "CUPS_ENCRYPTION=IfRequested",
+		  "CUPS_ENCRYPTION=Never",
+		  "CUPS_ENCRYPTION=Required",
+		  "CUPS_ENCRYPTION=Always"
+		};
 
 
  /*
@@ -3186,10 +3193,13 @@ pipe_command(client_t *con,		/* I - Client connection */
   */
 
   if (con->http.encryption == HTTP_ENCRYPT_ALWAYS)
-  {
     envp[envc ++] = "HTTPS=ON";
-    envp[envc ++] = "CUPS_ENCRYPTION=Always";
-  }
+
+  envp[envc ++] = (char *)encryptions[LocalEncryption];
+
+ /*
+  * Terminate the environment array...
+  */
 
   envp[envc] = NULL;
 
@@ -3395,5 +3405,5 @@ CDSAWriteFunc(SSLConnectionRef connection,	/* I  - SSL/TLS connection */
 
 
 /*
- * End of "$Id: client.c,v 1.91.2.81 2004/04/20 13:40:30 mike Exp $".
+ * End of "$Id: client.c,v 1.91.2.82 2004/06/17 14:45:12 mike Exp $".
  */
