@@ -1,5 +1,5 @@
 /*
- * "$Id: client.h,v 1.17.2.12 2004/03/02 20:56:02 mike Exp $"
+ * "$Id: client.h,v 1.17.2.13 2004/06/17 14:45:12 mike Exp $"
  *
  *   Client definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -71,6 +71,8 @@ VAR int			ListenBackLog	VALUE(SOMAXCONN),
 					/* Max backlog of pending connections */
 			LocalPort	VALUE(631);
 					/* Local port to use */
+VAR http_encryption_t	LocalEncryption	VALUE(HTTP_ENCRYPT_IF_REQUESTED);
+					/* Local port encryption to use */
 VAR int			NumListeners	VALUE(0);
 					/* Number of listening sockets */
 VAR listener_t		*Listeners	VALUE(NULL);
@@ -111,5 +113,5 @@ extern int	WriteClient(client_t *con);
 
 
 /*
- * End of "$Id: client.h,v 1.17.2.12 2004/03/02 20:56:02 mike Exp $".
+ * End of "$Id: client.h,v 1.17.2.13 2004/06/17 14:45:12 mike Exp $".
  */
